--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine
-RUN apk update && apk upgrade && apk add python3
+RUN apk update && apk upgrade && apk add python3 bash
 RUN mkdir /code
 COPY ./app.py /code
 WORKDIR /code
