--- a/kubernetes/gijs/service-ingress.yaml
+++ b/kubernetes/gijs/service-ingress.yaml
@@ -9,6 +9,8 @@ spec:
   selector:
     app: gijs
 
+---
+
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -18,7 +20,7 @@ spec:
     - host: 159.89.14.108.nip.io
       http:
         paths:
-          - path: /gijs/
+          - path: /gijs
             backend:
               serviceName: gijs-service
               servicePort: 80
