--- a/kubernetes/maria/deployment.yml
+++ b/kubernetes/maria/deployment.yml
@@ -9,14 +9,12 @@ spec:
       labels:
         app: maria
     spec:
-      imagePullSecrets:
-        - name: ttech-registry
       containers:
         - name: ttech-demo
-          image: 946041274772.dkr.ecr.eu-west-1.amazonaws.com/ttech-kubernetes:v0.1
+          image: liokqazq/ttech:v1
           command: ["python3"]
           args: ["app.py", "--message", "Change me, please!"]
-          imagePullPolicy: Always
+          tty: true
           ports:
             - containerPort: 8000
           env:
