--- a/kubernetes/maria/service-ingress.yaml
+++ b/kubernetes/maria/service-ingress.yaml
@@ -9,6 +9,8 @@ spec:
   selector:
     app: maria
 
+---
+
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -18,7 +20,7 @@ spec:
     - host: 159.89.14.108.nip.io
       http:
         paths:
-          - path: /maria/
+          - path: /maria
             backend:
               serviceName: maria-service
               servicePort: 80
