--- a/kubernetes/martijn/deployment.yaml
+++ b/kubernetes/martijn/deployment.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     metadata:
       labels:
-        app: martijn
+        ttech-app: martijn
     spec:
       containers:
         - name: ttech-demo
