--- a/kubernetes/rob/deployment.yaml
+++ b/kubernetes/rob/deployment.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     metadata:
       labels:
-        app: rob
+        ttech-app: rob
     spec:
       containers:
         - name: ttech-demo
