--- a/kubernetes/martijn/ingress-service.yaml
+++ b/kubernetes/martijn/ingress-service.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: martijn-service
+  labels:
+    ttech-app: martijn
 spec:
   rules:
     - host: 159.89.14.108.nip.io
@@ -18,6 +20,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: martijn-service
+  labels:
+    ttech-app: martijn
 spec:
   ports:
     - port: 80
